# content-processing-solution-accelerator

./: .gitignore  README.md  TRANSPARENCY_FAQ.md  azure.yaml  azure_custom.yaml  es-metadata.yml
src/ContentProcessor/: Dockerfile  azure_cicd.yml  conftest.py  pyproject.toml  pytest.ini  requirements.txt
src/ContentProcessor/.devcontainer/: Dockerfile  devcontainer.json
src/ContentProcessor/.github/instructions/: test-quality.instructions.md
src/ContentProcessor/src/: main.py
src/ContentProcessor/src/helpers/: azure_credential_utils.py
src/ContentProcessor/src/libs/: llm_token_telemetry.py  telemetry.py  token_usage_utils.py
src/ContentProcessor/src/libs/agent_framework/: agent_builder.py  agent_framework_helper.py  agent_framework_settings.py  agent_info.py  azure_openai_response_retry.py
src/ContentProcessor/src/libs/application/: __init__.py  application_configuration.py  application_context.py  env_config.py  service_config.py
src/ContentProcessor/src/libs/azure_helper/: __init__.py  app_configuration.py  azure_openai.py  comsos_mongo.py  content_understanding.py  storage_blob.py
src/ContentProcessor/src/libs/base/: __init__.py  application_main.py  application_models.py
src/ContentProcessor/src/libs/models/: __init__.py  content_process.py
src/ContentProcessor/src/libs/pipeline/: __init__.py  pipeline_queue_helper.py  pipeline_step_helper.py  queue_handler_base.py
src/ContentProcessor/src/libs/process_host/: __init__.py  handler_process_host.py  handler_type_loader.py
src/ContentProcessor/src/libs/utils/: __init__.py  azure_credential_utils.py  base64_util.py  credential_util.py  remote_module_loader.py  remote_schema_loader.py  utils.py
src/ContentProcessor/src/tests/: conftest.py  test_main.py
src/ContentProcessor/src/tests/azure_helper/: test_storage_blob.py
src/ContentProcessor/src/tests/helpers/: test_azure_credential_utils.py
src/ContentProcessor/src/tests/models/: test_content_process.py
src/ContentProcessor/src/tests/pipeline/: test_pipeline_step_helper.py  test_queue_handler_base.py
src/ContentProcessor/src/tests/process_host/: test_handler_process_host.py
src/ContentProcessor/tests/: conftest.py
src/ContentProcessor/tests/unit/: test_main.py
src/ContentProcessor/tests/unit/agent_framework/: test_azure_openai_response_retry.py
src/ContentProcessor/tests/unit/azure_helper/: test_content_understanding_model.py  test_storage_blob.py
src/ContentProcessor/tests/unit/libs/: test_token_usage_utils.py
src/ContentProcessor/tests/unit/pipeline/: test_mime_types.py  test_pipeline_queue_helper.py  test_pipeline_status.py  test_save_handler_scores.py
src/ContentProcessor/tests/unit/process_host/: test_handler_type_loader.py
src/ContentProcessor/tests/unit/utils/: test_remote_schema_loader.py  test_stopwatch.py
src/ContentProcessorAPI/: Dockerfile  azure_cicd.yaml  conftest.py  pyproject.toml  requirements.txt
src/ContentProcessorAPI/.devcontainer/: Dockerfile  devcontainer.json
src/ContentProcessorAPI/app/: .env  .env.dev  __init__.py  application.py  appsettings.py  dependencies.py  main.py
src/ContentProcessorAPI/app/libs/application/: application_configuration.py  application_context.py
src/ContentProcessorAPI/app/libs/base/: application_base.py  fastapi_protocol.py  typed_fastapi.py
src/ContentProcessorAPI/app/libs/logging/: event_utils.py
src/ContentProcessorAPI/app/libs/storage_blob/: helper.py
src/ContentProcessorAPI/app/libs/storage_queue/: helper.py
src/ContentProcessorAPI/app/routers/: claimprocessor.py  contentprocessor.py  http_probes.py  schemasetvault.py  schemavault.py
src/ContentProcessorAPI/app/routers/logics/: __init__.py  claimbatchpocessor.py  claimpocessor.py  contentprocessor.py  schema_validator.py  schemasetvault.py  schemavault.py
src/ContentProcessorAPI/app/tests/: test_main.py
src/ContentProcessorAPI/app/tests/libs/: test_app_configuration_helper.py  test_cosmos_db.py  test_mime_types.py  test_storage_blob.py  test_storage_queue.py  test_upload_validation.py
src/ContentProcessorAPI/app/tests/logics/: test_claimbatchprocessor_logic.py  test_schema_validator.py  (+3 more)
src/ContentProcessorAPI/app/utils/: __init__.py  azure_credential_utils.py  mime_types.py  telemetry_filter.py  upload_validation.py
src/ContentProcessorAPI/helpers/: azure_credential_utils.py
src/ContentProcessorAPI/samples/: register_and_upload.sh  upload_files.ps1  upload_files.sh
src/ContentProcessorAPI/samples/claim_date_of_loss/: bundle_info.json
src/ContentProcessorAPI/samples/claim_hail/: bundle_info.json
src/ContentProcessorAPI/samples/schemas/: MasterServiceAgreement.py  Planning.py  autoclaim.json  autoclaim.py  damagedcarimage.json  damagedcarimage.py  invoice.py  policereport.json  policereport.py  propertyclaim.py  register_schema.ps1  register_schema.py  register_schema.sh  repairestimate.json  repairestimate.py  schema_info.json
src/ContentProcessorAPI/test_http/: invoke_APIs.http  schema_API.http  schema_set_API.http
src/ContentProcessorAPI/tests/: conftest.py
src/ContentProcessorAPI/tests/helpers/: test_azure_credential_utils.py
src/ContentProcessorWorkflow/: .dockerignore  .env.example  Dockerfile  azure_cicd.yaml  pyproject.toml
src/ContentProcessorWorkflow/.devcontainer/: devcontainer.json
src/ContentProcessorWorkflow/.github/instructions/: code-quality.instructions.md
src/ContentProcessorWorkflow/.github/prompts/: coverage-gaps.prompt.md  sanitize-tests.prompt.md  write-tests.prompt.md
src/ContentProcessorWorkflow/src/: main.py  main_service.py
src/ContentProcessorWorkflow/src/libs/: __init__.py  llm_token_telemetry.py  telemetry.py  token_usage_utils.py
src/ContentProcessorWorkflow/src/repositories/: claim_processes.py
src/ContentProcessorWorkflow/src/services/: content_process_models.py  content_process_service.py  queue_service.py
src/ContentProcessorWorkflow/src/steps/: claim_processor.py
src/ContentProcessorWorkflow/src/utils/: __init__.py  credential_util.py  http_request.py  logging_utils.py  prompt_util.py
src/ContentProcessorWorkflow/tests/: conftest.py
(+498 files in other folders)
