[project]
name = "contentprocessor"
version = "0.1.0"
description = "Content Process Gold Standard Solution Accelerator - Content Processing Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-inference>=1.0.0b4",
    "azure-appconfiguration>=1.7.2",
    "azure-identity>=1.21.0",
    "azure-storage-blob>=12.24.0",
    "azure-storage-queue>=12.13.0",
    "certifi>=2024.12.14",
    "charset-normalizer>=3.4.1",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "poppler-utils>=0.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "pymongo>=4.11.0",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.9.0",
]


[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "pydantic>=2.10.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "mongomock>=2.3.1",
    "ruff>=0.9.3",
]

[tool.pytest.ini_options]
minversion = "8.3.4"
addopts = "--maxfail=1"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.poetry.scripts]
start-app = "src.main:main"
