[project]
name = "contentprocessor"
version = "0.1.0"
description = "Content Process Gold Standard Solution Accelerator - Content Processing Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "azure-appconfiguration>=1.7.2",
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.28.0",
    "azure-storage-queue>=12.15.0",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "poppler-utils>=0.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
]


[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "mongomock>=4.3.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
minversion = "8.3.4"
addopts = "--maxfail=1"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["src/tests/*", "**/test_*.py", "**/*_test.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.poetry.scripts]
start-app = "src.main:main"
