[project]
name = "contentprocessorapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-appconfiguration>=1.7.2",
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.28.0",
    "azure-storage-queue>=12.15.0",
    "certifi>=2026.1.4",
    "fastapi[standard]>=0.128.0",
    "poppler-utils>=0.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pygments>=2.19.2",
    "pymongo>=4.16.0",
    "python-dotenv>=1.0.1",
    "starlette>=0.49.1",
    "uvicorn[standard]>=0.34.0", 
    "h11>=0.16.0",
    "urllib3~=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "coverage>=7.13.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.11",
]
