[project]
name = "contentprocessorapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-appconfiguration==1.8.1",
    "azure-identity==1.26.0b2",
    "azure-storage-blob==12.30.0b1",
    "azure-storage-queue==12.17.0b1",
    "certifi==2026.5.20",
    "fastapi[standard]==0.136.3",
    "poppler-utils==0.1.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "pymongo==4.17.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.30",
    "starlette==1.2.1",
    "uvicorn[standard]==0.48.0",
    "h11==0.16.0",
    "urllib3~=2.7.0",
    "opentelemetry-api==1.40.0",
    "sas-cosmosdb==0.1.5",
    "azure-monitor-events-extension>=0.1.0",
    "azure-monitor-opentelemetry==1.8.8",
    "cryptography==48.0.0",
    "pyjwt==2.13.0",
    "jsonschema==4.26.0",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "coverage==7.14.1",
    "pre-commit==4.6.0",
    "ruff==0.15.15",
]

[tool.ruff.format]
line-ending = "auto"
