[project]
name = "processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251216",
    "aiohttp>=3.12.14",
    "art>=6.5",
    "azure-ai-agents>=1.2.0b1",
    "azure-ai-inference>=1.0.0b9",
    "azure-ai-projects>=1.0.0b10",
    "azure-appconfiguration>=1.7.1",
    "azure-core>=1.37.0",
    "azure-identity>=1.24.0",
    "azure-storage-blob>=12.20.0",
    "azure-storage-file-datalake>=12.21.0",
    "azure-storage-queue>=12.13.0",
    "fastmcp>=2.11.3",
    "jinja2>=3.1.6",
    "kafka-python>=2.3.0",
    "mcp>=1.13.1",
    "openai>=1.99.6",
    "psutil>=7.0.0",
    "pytz>=2023.3",
    "sas-cosmosdb>=0.1.4",
    "sas-storage>=1.0.0",
    "tenacity>=8.2.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
